syntax = "proto3";

package go.micro.srv.jwt;

service Jwt {
	rpc NewToken(NewTokenRequest) returns (NewTokenResponse) {}
}

message NewTokenRequest {
	string user_id = 1;
}

message NewTokenResponse {
	string access_token = 1;
	int64 expires_at = 2;
}